# fastapi-project-template

./: Dockerfile  Readme.md  docker-compose.yml  package.json  pyproject.toml  temp.py
data/: brands.csv  categories.csv
resources/js/: Auth.js  app.js
resources/js/containers/: TheContainer.vue  TheContainerSeller.vue  TheFooter.vue  VerticalHeader.vue
resources/js/router/: index.js
resources/js/views/: Dashboard.vue  NotificationPanel.vue
resources/js/views/Category/: Edit.vue  ManageCategories.vue
resources/js/views/Customers/: Wishlists.vue
resources/js/views/Dashboard/: ProductInfo.vue
resources/js/views/DeliveryBoy/: CashCollection.vue  Orders.vue
resources/js/views/DeliveryBoys/: DeliveryBoys.vue
resources/js/views/Emails/: EmailTemplates.vue  Emails.vue
resources/js/views/Notifications/: Edit.vue
resources/js/views/Orders/: ViewOrder.vue
resources/js/views/Product/: BulkUpdate.vue  EditProduct.vue  ProductRatings.vue  ViewProduct.vue
resources/js/views/PromoCode/: Edit.vue  PromoCode.vue
resources/js/views/Sections/: Edit.vue
resources/js/views/Seller/: EditSeller.vue  RegisteredSellers.vue  Sellers.vue
resources/lang/: en.json
resources/views/: welcome.blade.php
resources/views/layouts/: mail.blade.php
scripts/: export_brands.py  export_categories.py
src/: main.py
src/api/: routes.py
src/api/endpoints/: auth.py
src/api/helpers/: auth_helper.py
src/api/schema/: auth.py
src/core/: config.py  security.py  settings.py
src/db/: auth.py  session.py
src/db/models/: user.py
tests/fixtures/: app.py  db_setup.py
(+15 files in other folders)
